feat: Add initial portfolio content, favicon, and SEO metadata.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfolio</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Pradeep Kumar S | Junior Software Developer</title>
+  <meta name="description"
+    content="Portfolio of Pradeep Kumar S, a Junior Software Developer at Skillmine Technology specializing in AI-powered document systems and full-stack web development." />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://pradeepkumar.dev/" />
+  <meta property="og:title" content="Pradeep Kumar S | Junior Software Developer" />
+  <meta property="og:description"
+    content="Junior Software Developer specializing in AI-powered document systems and full-stack web development." />
+  <meta property="og:image" content="/og-image.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://pradeepkumar.dev/" />
+  <meta property="twitter:title" content="Pradeep Kumar S | Junior Software Developer" />
+  <meta property="twitter:description"
+    content="Junior Software Developer specializing in AI-powered document systems and full-stack web development." />
+  <meta property="twitter:image" content="/og-image.png" />
+
+  <link rel="apple-touch-icon" href="/favicon.svg" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
