--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <meta property="og:description"
     content="Junior Software Developer specializing in AI-powered document systems and full-stack web development." />
   <meta property="og:image" content="/og-image.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
